# ha_nordpool_cheapest_intervals

./: .env.example  .gitignore  README.md  pyproject.toml
pyscript/: config.yaml.example
pyscript/apps/shelly_car_charging/: __init__.py
pyscript/apps/shelly_cheap_hours/: __init__.py
pyscript/apps/shelly_cheap_intervals/: __init__.py
pyscript/apps/shelly_floor_heating/: __init__.py
pyscript/modules/: cheapest_hours.py  cheapest_intervals.py  weather_forecast.py
scripts/: deploy.sh
tests/: test_cheapest_hours.py  test_cheapest_intervals.py  test_weather_forecast.py
