[project]
name = "ha-nordpool-cheapest-hours"
version = "0.1.0"
description = "Home Assistant pyscript: run Shelly switches during Nordpool cheapest hours"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["pyscript/modules"]
